# Buildathon_Applications

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
backend/: __init__.py
backend/app/: __init__.py  database.py  deps.py  main.py  models.py  schemas.py  security.py  seed.py
backend/app/routers/: analytics.py  approvals.py  auth.py  balances.py  calendar.py  common.py  employees.py  leave_requests.py  records.py
backend/app/services/: employee_service.py  excel_records.py  leave_policy.py  leave_workflow.py
database excel/: daybook_records.xlsx
docs/: DEPLOYMENT_QA.md  ROADMAP.md
docs/screenshots/: README.md
frontend/: __init__.py  api_client.py  streamlit_app.py
shared/: demo_data.py  theme.py
tests/: test_backend_api.py  test_streamlit_e2e.py
